--- a/worker_lambda/pyproject.toml
+++ b/worker_lambda/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = "~=3.12"
 dependencies = [
     "aws-lambda-powertools>=3.22.0",
     "aws-xray-sdk>=2.15.0",
+    "boto3>=1.40.64",
 ]
 
