--- a/worker_lambda/Dockerfile
+++ b/worker_lambda/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/lambda/python:3.11
+FROM public.ecr.aws/lambda/python:3.12
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
@@ -6,8 +6,8 @@ WORKDIR ${LAMBDA_TASK_ROOT}
 
 COPY pyproject.toml uv.lock* ./
 
-RUN uv export --no-hashes --frozen > requirements.txt && \
-    uv pip install --system --no-cache -r requirements.txt
+RUN uv export --no-hashes --frozen > requirements.txt
+RUN uv pip install --system --no-cache -r requirements.txt
 
 COPY worker.py ${LAMBDA_TASK_ROOT}/
 
